k8s/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-deployment
  labels:
    app: kong
spec:
  selector:
    matchLabels:
      app: kong
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kong
        tier: frontend
    spec:
      containers:
        - name: kong
          image: kong:alpine
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8443
              name: proxy-ssl
            - containerPort: 8001
              name: admin-api                                  
            - containerPort: 8444
              name: admin-api-ssl
          volumeMounts:
            - name: kong-config
              mountPath: /etc/config
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
