k8s/kong.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
  labels:
    app: kong
spec:
  ports:
    - port: 8000
      name: proxy
    - port: 8443
      name: proxy-ssl
    - port: 8001
      name: admin-api
    - port: 8444
      name: admin-api-ssl            
  selector:
    app: kong
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-deployment
  labels:
    app: kong
spec:
  selector:
    matchLabels:
      app: kong
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kong
        tier: frontend
    spec:
      containers:
        - name: kong
          image: kong:alpine
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8443
              name: proxy-ssl
            - containerPort: 8001
              name: admin-api                                  
            - containerPort: 8444
              name: admin-api-ssl
