k8s/kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: miiify
spec:
  rules:
  - host: miiify
    http:
      paths:
      - path: /
        backend:
          serviceName: miiify
          servicePort: 8080
